--- a/style.css
+++ b/style.css
@@ -1,7 +1,10 @@
 /* style css du première section */
 .section1{
-    text-align: center;
-    align-content: baseline;
+    display: flex;
+    flex-direction: row;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     background-color: rgb(38, 87, 129);
     text-decoration: aliceblue;
     
@@ -10,20 +13,24 @@
 .photo{
     border-radius: 100px;
     width: 150px;
-    margin: auto;
-    margin-top: 10px;
     overflow: hidden;
 }
 .nom{
-    display: inline;
-    align-items: center;
+    text-align: center;
 }
 .coordonné{
-    padding: 200px 50px 50px 300px;
     display: flex;
-    flex-direction: row;
-    gap: 50px;
+    justify-content: center;
+    gap: 150px;
 }
+.dweling{
+    display: flex;   
+}
+
+.phone{
+    
+}
+
 .section2{
     display: flex;
     flex-direction: column;
@@ -43,11 +50,4 @@
    margin-left: 100px;
    margin-right: 100px;
 }
-#email {
-    width: 20px;
-    height: 20px;
-}
-.localisation {
-    width: 10px;
-    height: 10px;   
-}
+
