--- a/style.css
+++ b/style.css
@@ -5,9 +5,11 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: rgb(38, 87, 129);
+    background-color: rgb(14, 36, 56);
     text-decoration: aliceblue;
-    
+    row-gap: 50px;
+    padding-top: 100px;
+    padding-bottom: 100px;
 }
 /* le photo de profil */
 .photo{
@@ -15,6 +17,7 @@
     width: 150px;
     overflow: hidden;
 }
+
 .nom{
     text-align: center;
 }
@@ -24,13 +27,28 @@
     gap: 150px;
 }
 .dweling{
-    display: flex;   
+    display: flex;
+    flex-direction: column;
+    flex-direction: row;
+    justify-content: center;  
+    text-decoration: aliceblue; 
 }
 
 .phone{
-    
+    display: flex;
+    flex-direction: column;
+    flex-direction: row;
+    text-decoration: aliceblue;
+    gap: 10px;
 }
-
+.email{
+    display: flex;
+    flex-direction:column ;
+    flex-direction: row;
+    justify-content: center;
+    text-decoration: aliceblue;
+    gap: 10px;
+}
 .section2{
     display: flex;
     flex-direction: column;
